# AhabAssistantLimbusCompany

./: pyproject.toml
module/ocr/: ocr.py
