[project]
name = "ahab-assistant-limbus-company"
description = "Ahab Assistant for Limbus Company: automation helper (GUI, OCR, tasks)."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{ name = "KIYI671" }]
keywords = ["limbus", "automation", "pyqt", "ocr", "game-assistant"]
requires-python = ">=3.12"
version = "1.0.9"

dependencies = [
    "pyside6==6.9.2",
    "pyside6-fluent-widgets==1.9.1",
    "pyuac==0.0.3",
    "pywin32==311",
    "pyautogui==0.9.54",
    "pynput==1.8.1",
    "pyperclip==1.10.0",
    "playsound3==3.2.6",
    "requests==2.32.5",
    "packaging==25.0",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "linkify-it-py==2.0.3",
    "ruamel-yaml==0.18.15",
    "numpy==2.3.3",
    "opencv-python-headless==4.11.0.86",
    "pillow==11.3.0",
    "psutil==7.1.0",
    "concurrent-log-handler==0.9.28",
    "colorlog==6.9.0",
    "onnxruntime-directml==1.23.0",
    # "onnxruntime==1.23.2",
    "rapidocr==3.4.1",
    "tzdata==2025.2",
    "adbutils==2.10.2",
    "windows-toasts==1.3.1",
    "antlr4-python3-runtime==4.9.3",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "coloredlogs==15.0.1",
    "darkdetect==0.8.0",
    "decorator==5.2.1",
    "deprecation==2.1.0",
    "flatbuffers==25.2.10",
    "humanfriendly==10.0",
    "idna==3.10",
    "mdurl==0.1.2",
    "mouseinfo==0.1.3",
    "mpmath==1.3.0",
    "omegaconf==2.3.0",
    "portalocker==3.2.0",
    "protobuf==6.32.1",
    "pyclipper==1.3.0.post6",
    "pygetwindow==0.0.9",
    "pymsgbox==2.0.1",
    "pyreadline3==3.5.4 ; sys_platform == 'win32'",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pyside6-addons==6.9.2",
    "pyside6-essentials==6.9.2",
    "pysidesix-frameless-window==0.7.4",
    "pytweening==1.2.0",
    "pyyaml==6.0.2",
    "retry2==0.9.5",
    "ruamel-yaml-clib==0.2.12 ; python_full_version < '3.14' and platform_python_implementation == 'CPython'",
    "shapely==2.1.1",
    "shiboken6==6.9.2",
    "six==1.17.0",
    "sympy==1.14.0",
    "tee==0.0.3",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "uc-micro-py==1.0.3",
    "urllib3==2.5.0",
    "winrt-runtime==3.2.1",
    "winrt-windows-data-xml-dom==3.2.1",
    "winrt-windows-foundation==3.2.1",
    "winrt-windows-foundation-collections==3.2.1",
    "winrt-windows-ui-notifications==3.2.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "ruff>=0.13.1",
    "watchdog",
]

[project.urls]
Homepage = "https://github.com/KIYI671/AhabAssistantLimbusCompany"
Source = "https://github.com/KIYI671/AhabAssistantLimbusCompany"
Issues = "https://github.com/KIYI671/AhabAssistantLimbusCompany/issues"

[tool.uv]
managed = true
override-dependencies = ["opencv-python; python_version < '0'"]

# used by `pyside6-project lupdate`
[tool.pyside6-project]
files = [
    "main.py",
    "app/__init__.py",
    "app/my_app.py",
    "app/page_card.py",
    "app/setting_interface.py",
    "app/farming_interface.py",
    "app/tools_interface.py",
    "app/team_setting_card.py",
    "app/base_combination.py",
    "app/card/messagebox_custom.py",
    "app/base_tools.py",
    "app/language_manager.py",
    "app/windows_toast.py",
    "app/announcement_board.py",
    "module/update/check_update.py",
    "module/ALI/autoLangIdentification.py",
    "tasks/base/script_task_scheme.py",
    "tasks/tools/production_module.py",
    "i18n/myapp_en.ts",
]
